# elicit

./: .gitignore  README.md  debug_table.csv  output_table.csv  pyproject.toml  run_ui.sh
.github/: workflows
.github/workflows/: ci.yaml
archive/: aggrevating_factors.py  charges.py  mitigating_factors.py  test_charges.py
case_extraction/: case.py  charges.py  defendants.py  defendents.py  ensembler.py  example_cases.py  extraction.py  loading.py  pipelines.py  qa_transformer.py  utils.py  vectorizer.py
case_extraction/components/: defendants.py  keyword_search.py  nli_transformer.py  qa_transformer.py  regex.py  semantic_search.py  sex.py  similarity_transformer.py
case_extraction/utils/: example_cases.py  loading.py  performance.py  utils.py
data/: Offence list.xlsx  offenses.csv  record.csv  specified-offences.csv
data/labelled/: testing.json  training.json
data/test/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/train/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
database/: db.sqlite  db_schema.sql  db_utils.py
elicit/: __init__.py  case.py  controller.py  default_extractors.py  document.py  example_extractor.py  example_pipelines.py  extractor.py  interface.py  main.py  performance.py  pipeline.py  pipelines.py  vectorizer.py
examples/: basic_example.ipynb  test_db.sqlite
schema/: categories.yml  demo_categories.yml  demo_keywords.yml  demo_masks.yml  demo_questions.yml  keywords.yml  offense_categories.yml  offense_keywords.yml  offense_masks.yml  offense_questions.yml  questions.yml
scripts/: anonymizer.py  count_scans.py  create_dataset.py  example_cases.py  export.csv  fine_tuning.py  move_data.py  offense_distribution.py  produce_comparison_table.py  produce_json.py  run_offense_pipeline.py  run_pipeline.py  run_test_cases.py  update_metadata.py  update_readme_performance.py
tests/: catdog.sqlite  common.py  test_case.py  test_case_performance.csv  test_case_type.py  test_controller.py  test_database.py  test_defendants.py  test_document.py  test_extraction.py  test_extractor.py  test_interface.py  test_loading.py  test_logger.py  test_performance.py  test_sorting.py  test_transformer.py  test_utils.py  test_vectorizer.py
user_interface/: package-lock.json  package.json
(+69 files in other folders)
