[tool.poetry]
name = "elicit"
version = "0.1.0"
description = "Elicit is a human in the loop machine learning tool for extracting information from complex documents."
authors = ["bradley-butcher <bradleydpbutcher@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
tqdm = "^4.62.3"
"pdfminer.six" = "^20211012"
spacy = "^3.1.4"
pandas = ">=1.3"
PyYAML = "^6.0"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
scikit-learn = "^1.1.1"
activeweasul = { git = "https://github.com/Bradley-Butcher/ActiveWeaSuL.git", branch = "main" }


[tool.poetry.extras]
transformers = ["transformers^4.12.3", "torch^1.10.0", "sentence-transformers^2.1.0", "datasets^1.15.1"]

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
elicit = 'elicit.main:main'